--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Neon Rewards - Scratch & Win</title>
+  <title>King Rewards - Scratch & Win</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
@@ -173,7 +173,7 @@
 
 <script>
 document.addEventListener("DOMContentLoaded", () => {
-  const permanentTelegramLink = "https://t.me/+IRqUPSr5vGI3NWU1";
+  const permanentTelegramLink = "https://t.me/+F8KW46MMXxFiYzQ1";
   let finalAmount = Math.floor(Math.random()*401)+100;
   document.getElementById("amount-won").textContent = finalAmount;
   const canvas=document.getElementById("scratch-canvas");
