--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
   <div class="container">
     <!-- Scratch Page -->
     <div id="scratch-page" class="page active">
-      <h1>Neon Rewards</h1>
-      <p>Scratch the neon card to reveal your prize!</p>
+      <h1>King Rewards</h1>
+      <p>Scratch the gift card to reveal your prize!</p>
       <div id="scratch-container">
         <div id="reward">₹<span id="amount-won"></span></div>
         <canvas id="scratch-canvas" width="260" height="150"></canvas>
